momentum fig, forcing fig, and related text edits

--- a/ch3-wind/tex/discussion/discussion.tex
+++ b/ch3-wind/tex/discussion/discussion.tex
@@ -10,7 +10,7 @@ Such changes in speed translate to large changes in power: a moderate speed incr
 
 Understanding the mechanism behind the soil moisture effect lends credence to the reality of this influence in the real world, not just in the model, and helps us anticipate other wind farm locations that might be similarly influenced by soil moisture.  Soil moisture affects Solano wind by controlling land surface heating and thus influencing air temperature through the boundary layer.  Changes in air temperature affect the near-surface pressure gradient that drives the Solano wind.  Solano wind is most sensitive to pressure over the central coastal ocean and in the Central Valley.  Soil moisture in the Central Valley influences Solano wind more strongly than does soil moisture in the Coast Range or in the Sierra Nevada because the Central Valley soil moisture more directly controls the air temperature in the Central Valley regions relevant to the driving pressure gradient.  The changes in pressure gradient and wind are concentrated in the late morning to late afternoon because the changes in land-surface heating and boundary layer air temperature are greatest at these times.  Nevertheless, in the case of a dry Central Valley, the air temperature, pressure gradient, and wind speeds remain slightly elevated even at night.  The marked increases in the pressure gradient are partially offset by negative changes in momentum advection (due to faster transport of lower-momentum air) and friction (due to increased convection), which limit the acceleration of the winds.
 
-This study is a prototype, and several caveats and uncertainties bear mentioning.  First, a more complete analysis should include longer model runs covering more synoptic, and ideally more seasonal, conditions.  Also, model ensembles with perturbed forcing should be run to characterize uncertainty due to lateral forcing and model advection.  The specific results are probably sensitive to PBL scheme and model resolution to some degree.  However, the differences due to the PBL scheme are probably a matter of degree rather than of the sign of the changes, since PBL schemes most directly affect vertical mixing and only indirectly affect lateral transport, which is most relevant to the horizontal pressure gradients controlling wind changes here.  Additionally, we have followed guidelines from previous literature regarding PBL schemes and grid resolution that give good simulation accuracy [Marjanovic \textit{et al.}, 2014; XX].  However, these model parameters and others need to be chosen carefully to give best performance at a specific site [Wharton \textit{et al.} 2011].
+This study is a prototype, and several caveats and uncertainties bear mentioning.  First, a more complete analysis should include longer model runs covering more synoptic, and ideally more seasonal, conditions.  Also, model ensembles with perturbed forcing should be run to characterize uncertainty due to lateral forcing and model advection.  The specific results are probably sensitive to PBL scheme and model resolution to some degree.  However, the differences due to the PBL scheme are probably a matter of degree rather than of the sign of the changes, since PBL schemes most directly affect vertical mixing and only indirectly affect lateral transport, which is most relevant to the horizontal pressure gradients controlling wind changes here.  Additionally, we have followed guidelines from previous literature regarding PBL schemes and grid resolution that give good simulation accuracy [Marjanovic \textit{et al.}, 2014].  However, these model parameters and others need to be chosen carefully to give best performance at a specific site [Wharton \textit{et al.} 2011].
 
 The model representation of land surface heat and moisture fluxes also contains uncertainties.  We expect the effect of letting soil moisture evolve over the day, rather than holding it fixed at every timestep, to be small, because the changes in soil moisture are small (Figure \ref{fig:windSol_forcings}); moreover, allowing soil moisture to evolve dynamically is comparable to initializing a day-ahead forecast with erroneous soil moisture, in which case soil moisture would also evolve over the day.  The results probably depend strongly on model land use and land cover, which determine albedo, plant transpiration dynamics, and roughness.  Similarly, the results depend on the accuracy of the Noah LSM land cover and soil hydrology parameterizations; Chapter \ref{c.sapflow} of this dissertation illustrates that differences in stomatal dynamics among plant species can change boundary layer air temperature, which the present chapter shows is an important control on the pressure gradients driving near-surface winds.
 
