--- a/ch3-wind/tex/methods/methods.tex
+++ b/ch3-wind/tex/methods/methods.tex
@@ -46,9 +46,9 @@ d02 & 2.7 & 2.7 & 175 & 175 & 45 & 15 & 2 min\\
 
 In WRF, the atmospheric model is coupled to the Noah land surface model with 24-category USGS land use and 16-category soil classifications [\cite{skamarock2008}].  The observed distributions of land use and soil types are used [\cite{eidenshink19941}; \cite{miller1998conterminous}], as are the default vegetation water-use parameters for each land use type [\cite{skamarock2008}], in order to simulate as closely as possible the real present day sensitivity of Solano winds to soil moisture.  Uncertainties associated with errors in the model representation of water movement in the subsurface and plant water use are addressed in the Discussion. 
 
-As in Chapter \ref{c.BL}, the ACM2 PBL scheme is used, following the recommendations of \cite{marjanovic2014} for a locally forced simple terrain case in California; this PBL scheme includes both local (small-scale turbulent) and nonlocal (large convective plume) vertical transport, and can thus simulate both stable and unstable conditions [\cite{pleim2007combined}] A LITTLE MORE DETAIL ABOUT THE PHYSICS.  The model is forced at the lateral boundaries with NCEP Eta 212 grid (40 km) operational analysis [\cite{ncep}].  Other parameterization schemes and settings are as in Table \ref{table:BL_paramschemes}.  Model variables are output every 30 minutes.
+As in Chapter \ref{c.BL}, the ACM2 PBL scheme is used, following the recommendations of \cite{marjanovic2014} for a locally forced simple terrain case in California.  This PBL scheme includes both local (small-scale turbulent) transport, via an eddy diffusivity term between neighboring grid points, and nonlocal (large convective plume) vertical transport, via parametrized exchanged between non-adjacent grid points as a function of buoyant instability; it can thus simulate both stable and unstable conditions [\cite{pleim2007combined}].  The model is forced at the lateral boundaries with NCEP Eta 212 grid (40 km) operational analysis [\cite{ncep}].  Other parameterization schemes and settings are as in Table \ref{table:BL_paramschemes}.  Model variables are output every 30 minutes.
 
-All experiments are run for the period 2009-06-26 00:00 UTC to 2009-07-11 00:00 UTC, and the first 32 hours are discarded as model spin-up.  This period was chosen for several reasons: (1) it contains a range of synoptic conditions (weak background wind June 27-July 5, and strong background wind July 6-11; Figure \textbf{XX}), (2) turbine-level wind speeds in this region are highest in the spring and summer [\cite{zhong2004diurnal}; \cite{mansbach2010synoptic}], and (3) the sensitivity to soil moisture is expected to be strongest in the warm season when radiation incident to the land surface is greatest, because changes in the relative partitioning between evapotranspiration and sensible heat flux have the largest absolute magnitude then.
+All experiments are run for the period 2009-06-26 00:00 UTC to 2009-07-11 00:00 UTC, and the first 32 hours are discarded as model spin-up.  This period was chosen for several reasons: (1) it contains a range of synoptic conditions (weak upper-level wind June 27-July 5, and strong upper-level wind July 6-11; Figure \ref{fig:windSol_forcings}), (2) turbine-level wind speeds in this region are highest in the spring and summer [\cite{zhong2004diurnal}; \cite{mansbach2010synoptic}], and (3) the sensitivity to soil moisture is expected to be strongest in the warm season when radiation incident to the land surface is greatest, because changes in the relative partitioning between evapotranspiration and sensible heat flux have the largest absolute magnitude then.
 
 \subsection{Soil moisture experiments}
 
@@ -63,13 +63,13 @@ We conduct three sets of model experiments, listed in Table \ref{table:windSol_r
 The next set of experiments tests how the Solano wind response scales with soil moisture in the Central Valley, with a normal-to-wet background in the Coast Range and Sierra Nevada.  In cases CVXX (where XX is a numeric value), the Coast Range and Sierra Nevada regions' soil moisture is set to 0.2, and the Central Valley soil moisture is set to the value specified by XX.  These test cases are compared with a control case where all land has soil moisture of 0.2.
 %In cases CVXXdry, the Coast Range and Sierra Nevada regions' soil moisture is set to 0.1, and the Central Valley soil moisture again is specified by XX.
 
-In all cases, the soil moisture is set to the prescribed values at the model start time (2009-06-26 00:00 UTC) and is reset to the prescribed value each day at 08:00 UTC (midnight Pacific Standard Time); the soil moisture evolves according to the land surface model each day between resets.  The change in soil moisture between resets is small (up to 0.02 m$^3$/m$^3$ in the regional average when soils are wet and much less when soils are dry.  Additionally, the synoptic forcing, measured by wind speed at 500 hPa, varies little between the model runs (Figure XX), and synoptic winds are weak on June 27 to July 5 and strong on July 6 to 11.  In all three regions, land surface sensible heat flux is approximately 200 W/m$^2$ greater at midday with wet soil moisture (0.25) than dry soil moisture (0.1).  \textbf{Need to make figure showing these.}
+In all cases, the soil moisture is set to the prescribed values at the model start time (2009-06-26 00:00 UTC) and is reset to the prescribed value each day at 08:00 UTC (midnight Pacific Standard Time); the soil moisture evolves according to the land surface model each day between resets.  The change in soil moisture between resets is small (up to 0.02 m$^3$/m$^3$ in the regional average when soils are wet and much less when soils are dry).  Additionally, the synoptic forcing, measured by wind speed at 500 hPa, varies little between the model runs (Figure \ref{fig:windSol_forcings}), and synoptic winds are weak on June 27 to July 5 and strong on July 6 to 11.  In all three regions, land surface sensible heat flux is approximately 200 W/m$^2$ greater at midday with wet soil moisture (0.25) than dry soil moisture (0.1).  Figure \ref{fig:windSol_forcings} shows the forcings for experiment 2, CV region; the forcings for the CR and SN regions and for experiments 1 and 3 follow similar patterns (less than 10\% soil moisture change each day, and substantial sensible heat flux increases over drier soil) and are not shown.
 
-%\begin{figure}[here]
-%\includegraphics[width=1\textwidth]{ch3-wind/img/forcings_combo_good.png}
-%\caption{Model forcing for all of the regional perturbation cases.  \textbf{I NEED ADVICE ON HOW TO DISPLAY THIS INFORMATION MORE CLEARLY AND/OR CONCISELY. Obviously, I need a legend for which color means which run.}  Top panel: wind speed over Solano at 500 hPa.  Panels 2-4: average soil moisture in the top soil layer for the CR region (panel 2), the CV region (panel 3), and the SN region (panel 4).  Panels 5-7: average surface sensible heat flux for the CR region (panel 5), the CV region (panel 6), and the SN region (panel 7).}
-%\label{fig:windSol_forcings}
-%\end{figure}
+\begin{figure}[here]
+\includegraphics[width=1\textwidth]{ch3-wind/img/forcing.png}
+\caption{Model forcing for the experiment 2 cases.  Top panel: wind speed at the Solano lat-lon at 500 hPa.  Middle panel: volumetric soil moisture, averaged over the Central Valley region.  Bottom panel: sensible heat flux at the land surface, averaged over the Central Valley region.}
+\label{fig:windSol_forcings}
+\end{figure}
 
 \begin{table}
 \begin{tabular}{p{2.5cm} l p{3cm} p{3cm} p{3.5cm}}
