--- a/ch3-wind/tex/results/results.tex
+++ b/ch3-wind/tex/results/results.tex
@@ -57,7 +57,7 @@ The low-level winds in these experiments follow a strong diurnal cycle, driven b
 \label{fig:windSol_TseriesWetRg}
 \end{figure}
 
-Similarly, low-level wind (60 m AGL, 110 m ASL) at Solano has a strong diurnal cycle (Figures \ref{fig:windSol_TseriesDryRg}(a) and \ref{fig:windSol_TseriesWetRg}(a)); notably, the surface wind speed does not track the 500 hPa synoptic wind in this period (cf. Figure \ref{fig:windSol_forcings}).  Solano wind speeds at 60 m AGL are greatest at night (19:00 to 03:00) and weakest in the morning (08:00 to 13:00; Figure \ref{fig:windSol_DiffDiurnalDryRg}(a) and Figure \ref{fig:windSol_DiffDiurnalWetRg}(a))  There is a pronounced low-level ($\le$300 m) peak in Solano winds that is particularly pronounced at night (Figure \ref{fig:windSol_VertProfileDryRg}).
+Similarly, low-level wind (60 m AGL, 110 m ASL) at Solano has a strong diurnal cycle (Figures \ref{fig:windSol_TseriesDryRg}(a) and \ref{fig:windSol_TseriesWetRg}(a)); notably, the surface wind speed does not track the 500 hPa synoptic wind in this period (cf. Figure \ref{fig:windSol_forcings}).  Solano wind speeds at 60 m AGL are greatest at night (19:00 to 03:00) and weakest in the morning (08:00 to 13:00; Figure \ref{fig:windSol_DiffDiurnalDryRg}(a) and (c))  There is a pronounced low-level ($\le$300 m) peak in Solano winds that is particularly pronounced at night (Figure \ref{fig:windSol_VertProfileDryRg}).
 
 \begin{figure}[here]
 \begin{subfigure}{0.5\textwidth}
@@ -123,7 +123,7 @@ The Solano wind changes occur in the context of larger regional wind and pressur
 
 For all regional test cases, drier soils on a wet background increase Solano winds in the afternoon and evening relative to the all-wet control (Figure \ref{fig:windSol_DiffDiurnalDryRg}(b)); this increase is largest in the dryCV case.  The increases in both the dryCV and drySN cases are greatest between 11:00 and 18:00 (0.8-1.8 m/s for dryCV and 0.25-0.8 m/s for drySN), while the increase in the dryCR case happens later, between 17:00 and 22:00 (0.25-1 m/s).  Importantly, increases in the afternoon cause the daily wind speed ramp-up to shift earlier, because the increases occur at the same time as the control ramp-up (Figure \ref{fig:windSol_DiffDiurnalDryRg}(a)).  Because there are no corresponding decreases at the hour of ramp-down, this means that the duration of the high-wind period also increases.  Also, drier soils (especially in the Central Valley) increase the minimum wind (08:00 to 13:00) on many individual days (Figure \ref{fig:windSol_TseriesDryRg}), but the average increases in the minimum wind are not more than one standard deviation greater than zero in the two-week average diurnal cycle (Figure \ref{fig:windSol_DiffDiurnalDryRg}(b)).
 
-Wetter soils on a dry background cause winds to decrease relative to the all-dry control case, and the magnitudes of the decreases are similar to the magnitudes of the increases in the dry regional tests (Figure \ref{fig:windSol_DiffDiurnalWetRg}(b)).  Again, the decrease is largest in when Central Valley soil moisture is perturbed.  Both the wetCV and wetSN cases have wind decreases during 10:00-18:00 that are more than one standard deviation from zero (0.5-1.8 m/s for wetCV and 0.25-0.8 m/s for wetSN); for the wetCR case, there are no times of day with wind changes more than one standard deviation from zero, although there are weak decreases in the late afternoon and evening.
+Wetter soils on a dry background cause winds to decrease relative to the all-dry control case, and the magnitudes of the decreases are similar to the magnitudes of the increases in the dry regional tests (Figure \ref{fig:windSol_DiffDiurnalDryRg}(d)).  Again, the decrease is largest in when Central Valley soil moisture is perturbed.  Both the wetCV and wetSN cases have wind decreases during 10:00-18:00 that are more than one standard deviation from zero (0.5-1.8 m/s for wetCV and 0.25-0.8 m/s for wetSN); for the wetCR case, there are no times of day with wind changes more than one standard deviation from zero, although there are weak decreases in the late afternoon and evening.
 
 In summary, the Central Valley soil moisture influences the Solano turbine-level winds more strongly than does the Coast Range or Sierra Nevada soil moisture.  Drier soils in all regions, but especially in the Central Valley, increase Solano wind speeds during ramp-up and peak hours (afternoon and evening); drier soils in the Central Valley, especially, shift the daily wind ramp-up earlier.  Conversely, wetter Central Valley soils cause Solano winds to decrease during ramp-up and peak times.
 
@@ -154,7 +154,7 @@ In summary, the Central Valley soil moisture influences the Solano turbine-level
 \label{fig:windSol_ShiftsMaxCV}
 \end{figure}
 
-Drier Central Valley soils increase Solano winds, while wetter Central Valley soils decrease Solano winds, relative to the moderately wet control of soil moisture = 0.2 (Figure \ref{fig:windSol_TseriesWindCV}.)  These changes can be up to 3 m/s, and they occur most consistently in the hours of 12:00 to 22:00 (Figure \ref{fig:windSol_DiffDiurnalCV0pt2}(b)), when they are 0.8-1.7 m/s on average in the driest Central Valley case (CV0.05).  The average changes during hours 12:00 to 22:00 scale approximately linearly with CV soil moisture (Figure \ref{fig:windSol_ShiftsMaxCV}).
+Drier Central Valley soils increase Solano winds, while wetter Central Valley soils decrease Solano winds, relative to the moderately wet control of soil moisture = 0.2 (Figure \ref{fig:windSol_TseriesWindCV}.)  These changes can be up to nearly 3 m/s, and they occur most consistently in the hours of 12:00 to 22:00 (Figure \ref{fig:windSol_DiffDiurnalCV0pt2}(b)), when they are 0.8-1.7 m/s on average in the driest Central Valley case (CV0.05).  The average changes during hours 12:00 to 22:00 scale approximately linearly with CV soil moisture (Figure \ref{fig:windSol_ShiftsMaxCV}).
 
 %\clearpage
 
@@ -253,7 +253,7 @@ We proceed to investigate how changes in pressure in the soil moisture test case
 \end{FPfigure}
 %\end{figure}
 
-The diurnal variations in low-level pressure correspond to diurnal variations in boundary layer temperature.  Pressure is the vertical integral of the weight of the air column above a point, and changes in temperature change the density and thus the weight of the air column.  As expected from the differences in specific heat, diurnal temperature variations are larger in the Central Valley than over the ocean (Figure \ref{fig:windSol_TimeHeightCtrl}).  In the NCV box, the temperature near the surface (\textless 100 m ASL) declines quickly after sunset, but the temperature aloft in the boundary layer (particularly 300-700 m) remains elevated until at least midnight (Figure \ref{fig:windSol_TimeHeightCtrl}, panel 2).  This is because advection of cool oceanic air is concentrated at low levels where the wind speed is maximum, and because the stratified nocturnal boundary layer suppresses mixing and limits the vertical extent of surface cooling.  In the time period of these experiments (June/July), both the NCV temperature and the NCV-OCN temperature difference peak around 17:00 local time.  The temperature difference at low levels (\textless 110 m) drops after sunset and approaches zero in the early morning some days, but the temperature difference remains positive at 110-490 m on most days, with NCV warmer than OCN by up to 12 deg C even in the early morning.  The pressure difference is most negative (strongest gradient) at the same time as the maximum temperature difference, around 17:00 PST, and is smallest in magnitude (weakest gradient) just before sunrise, around 06:00, when the NCV boundary layer is coolest.  
+The diurnal variations in low-level pressure correspond to diurnal variations in boundary layer temperature.  Pressure is the vertical integral of the weight of the air column above a point, and changes in temperature change the density and thus the weight of the air column.  As expected from the differences in specific heat, diurnal temperature variations are larger in the Central Valley than over the ocean (Figure \ref{fig:windSol_TimeHeightCtrl}).  In the NCV box, the temperature near the surface (\textless 100 m ASL) declines quickly after sunset, but the temperature aloft in the boundary layer (particularly 300-700 m) remains elevated until at least midnight (Figure \ref{fig:windSol_TimeHeightCtrl}, panel 2).  This is because advection of cool oceanic air is concentrated at low levels where the wind speed is maximum, and because the stratified nocturnal boundary layer suppresses mixing and limits the vertical extent of surface cooling.  In the time period of these experiments (June/July), both the NCV temperature and the NCV-OCN temperature difference peak around 17:00 local time.  The temperature difference at low levels (\textless 110 m) drops after sunset and approaches zero in the early morning some days, but the temperature difference remains positive at 110-490 m on most days, with NCV warmer than OCN by up to 12$^\circ$C even in the early morning.  The pressure difference is most negative (strongest gradient) at the same time as the maximum temperature difference, around 17:00 PST, and is smallest in magnitude (weakest gradient) just before sunrise, around 06:00, when the NCV boundary layer is coolest.  
 
 %\begin{figure}[here]
 \begin{FPfigure}
@@ -270,8 +270,8 @@ In the dryCV case, the NCV box experiences strong low-level heating beginning in
 \subsubsection{Momentum budget timing and changes}
 
 \begin{figure}[here]
-\includegraphics[width=0.9\textwidth]{ch3-wind/img/momentum_terms_diurnal_0pt25.png}
-\caption{Experiment 2 control case (CA-0.25): Diurnal average of terms of the momentum balance.  The pressure gradient term is calculated between the NCV and OCN boxes, using density calculated at Solano 60 m AGL.  Advection is calculated as $u_{solano}\frac{\partial u}{\partial x}$, with $\frac{\partial u}{\partial x}$ being the wind gradient between Solano and the northern San Francisco Bay.  $\frac{\partial u}{\partial t}$ is calculated using Solano 60 m AGL wind speed.  Friction (cyan) is calculated as the residual of the other three terms, following Equation \ref{eqn:windSol_momentum}.  Shading represents one standard deviation.}
+\includegraphics[width=0.7\textwidth]{ch3-wind/img/momentum_terms_diurnal_0pt25.png}
+\caption{Experiment 2 control (CA-0.25): Diurnal average of momentum balance terms (top) and Solano wind speed (bottom).  Pressure gradient is calculated between the NCV and OCN boxes, using density calculated at Solano 60 m AGL.  Advection is calculated as $u_{solano}\frac{\partial u}{\partial x}$, using $\frac{\partial u}{\partial x}$ between Solano and the northern San Francisco Bay.  $\frac{\partial u}{\partial t}$ is calculated using Solano 60 m AGL wind speed.  "Resid" (cyan) is the residual of the other three terms.  Shading represents one standard deviation.}
 \label{fig:windSol_MomTermsDiurn}
 \end{figure}
 
@@ -282,8 +282,8 @@ Using these three model-derived terms (pressure gradient, advection, and time te
 This turbulent resistance residual is of comparable magnitude to the pressure gradient and advection terms, and as such is very important for determining the magnitude and phase of the diurnal wind cycle.  In the afternoon in the experiment 2 control case (CA-0.25), the pressure gradient term is large and positive and the negative momentum advection is small.  If the residual term (interpreted as convective turbulent drag) were not also large and negative at this time, the wind would accelerate much faster than is actually observed.  Conversely, high wind speeds persist even after the pressure gradient declines between 22:00 and 04:00 local time and despite the strong advection of lower momentum air.  If the residual term during the night remained at its large negative afternoon  values, the winds would decelerate at night, rather than maintaining high speed as observed.  The decline in magnitude of the turbulent drag term at night is necessary in order to explain the observed strength of nighttime winds.
 
 \begin{figure}[here]
-\includegraphics[width=0.9\textwidth]{ch3-wind/img/momentum_terms_diurnal_diff_dryCV.png}
-\caption{Experiment 2 dryCV case: Diurnal average of test-minus-control change in terms of the momentum balance, calculated as in Figure \ref{fig:windSol_MomTermsDiurn}.  Shading represents one standard deviation.}
+\includegraphics[width=0.7\textwidth]{ch3-wind/img/momentum_terms_diurnal_diff_dryCV.png}
+\caption{Experiment 2 dryCV case: Diurnal average of test-minus-control change in terms of the momentum balance (top) and Solano wind speed (bottom), calculated as in Figure \ref{fig:windSol_MomTermsDiurn}.  Shading represents one standard deviation.}
 \label{fig:windSol_MomTermsDiurnDiff}
 \end{figure}
 
